--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,6 +3,7 @@ dependencies: []
 
 galaxy_info:
   author: "Alexander Fradynskyi"
+  description: Deploy Mailcatcher to your Ubuntu Server
   company: GoodAhead
   license: BSD
   min_ansible_version: 2.0
