--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,9 +2,8 @@
 dependencies: []
 
 galaxy_info:
-  author: "Alexander Fradynskyi"
+  author: "Oleksandr Fradynskyi"
   description: Deploy Mailcatcher to your Ubuntu Server
-  company: GoodAhead
   license: BSD
   min_ansible_version: 2.0
   issue_tracker_uri: https://github.com/fradee/ansible-mailcatcher/issues
@@ -13,6 +12,7 @@ galaxy_info:
       versions:
         - trusty
         - xenial
+        - bionic
   galaxy_tags:
     - mailcatcher
     - smtp
